# Counting-Triangles-in-an-undirected-Graph

./: README.md
assignment_1_879779/: CMakeLists.txt
assignment_1_879779/assignments/: report assignment 1 - LwMD 879779.pages
assignment_1_879779/assignments/asgmt_1/: Graph_ds.cpp  Graph_ds.h  main.cpp  plot_data.ipynb
assignment_1_879779/assignments/asgmt_1/execution_times/: results_10000_05.csv  results_1000_95.csv  results_1005_email.csv  results_36692_enron.csv  results_4039_fb.csv  results_5000_50.csv  results_58228_bright.csv  results_70000_00005.csv  results_fast_1000_95_10220ms.csv  results_fast_1005_email_5873ms.csv  results_fast_4039_fb_365710ms.csv  results_fast_5000_50_1290968ms_6250609edges.csv  results_node_1000_95.csv  results_node_1005_email.csv  results_node_36692_enron.csv  results_node_4039_fb.csv  results_node_58228_bright.csv  results_node_70000_00005.csv
assignment_1_879779/lessons-examples/cache-mm/: matrix-mult-bw-col.cpp  matrix-mult-bw-kernel.cpp  matrix-mult-bw-static.cpp  matrix-mult-bw-true.cpp  matrix-mult-col-major.cpp  matrix-mult-row-major.cpp
assignment_1_879779/lessons-examples/openmp/: mandelbrot.cc  matrixmult.cpp  openmp-pi.cc
assignment_1_879779/lessons-examples/std-threads/: helloworld.cpp  pi-future.cpp  pi-pthreads.cc  pi-std-async.cc  pi-std-future.cc  pi-std-threads.cc  prod-cons  prod-cons-condition.cpp  prod-cons-guards.cpp  prod-cons.cc
